# DirectMQ

./: Dockerfile  README.md  flake.nix  taskfile.yml
.devcontainer/: devcontainer.json  docker-config.json  on-create.sh
go/: bridge.go  close_reasons.go  diagnostics.go  direct_bridge.go  direct_diagnostics.go  direct_mq.go  go.mod  go.sum  handler.go  native_api.go  native_client.go  protocol.go  queue.go  subscription_list.go  utils.go  websocket_portal.go
go/protocol/v1/: connection.pb.go  data_frame.pb.go  loop_detection.pb.go  publish.pb.go  subscribe.pb.go  unsubscribe.pb.go  version.pb.go
proto/: CMakeLists.txt  Dockerfile  buf.gen.yaml  buf.yaml  generate.sh  go.mod  taskfile.yml
proto/directmq/v1/: connection.options  connection.proto  data_frame.proto  publish.proto  subscribe.proto  unsubscribe.proto
proto/src/directmq/v1/: connection.proto  data_frame.proto  loop_detection.proto  publish.proto  subscribe.proto  unsubscribe.proto  version.proto
sdk/: taskfile.yml
sdk/cpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py  taskfile.yml
sdk/cpp/include/: bytes.hpp  directmq.hpp  portal.hpp  subscription_list.hpp  topic_pattern.hpp
sdk/cpp/include/api/: diagnostics.hpp  native.hpp
sdk/cpp/include/network/: config.hpp  constants.hpp  global.hpp  node.hpp  participant.hpp
sdk/cpp/include/network/edge/: edge_info.hpp  network_edge.hpp  network_edge_state.hpp  network_edge_state_connected.hpp  network_edge_state_connecting.hpp  network_edge_state_disconnected.hpp  network_edge_state_disconnecting.hpp  network_edge_state_manager.hpp  state_name.hpp  utilities.hpp
sdk/cpp/include/portals/websocket/: client.hpp  portal.hpp  runnable.hpp  server.hpp
sdk/cpp/include/protocol/: decoder.hpp  encoder.hpp  messages.hpp
sdk/cpp/include/protocol/embedded/: decoder.hpp  encoder.hpp
sdk/cpp/include/protocol/messages/: connection_accepted.hpp  data_frame.hpp  gracefully_close.hpp  init_connection.hpp  malformed.hpp  publish.hpp  subscribe.hpp  supported_protocol_versions.hpp  terminate_network.hpp  unsubscribe.hpp
sdk/cpp/include/utils/: includes_string.hpp  only_unique_strings.hpp  random_order.hpp
sdk/cpp/lib/: .gitignore  CMakeLists.txt
sdk/cpp/lib/dmq-proto-embedded/directmq/v1/: connection.pb.h  data_frame.pb.h  publish.pb.h
sdk/cpp/lib/dmq_proto_embedded/: CMakeLists.txt
sdk/cpp/lib/dmq_proto_embedded/directmq/v1/: connection.pb.c  subscribe.pb.c  subscribe.pb.h  unsubscribe.pb.h
sdk/cpp/lib/protocol/directmq/v1/: connection.pb.h  data_frame.pb.h  publish.pb.h  subscribe.pb.h  unsubscribe.pb.h
sdk/cpp/protocol/directmq/v1/: data_frame.pb.c  publish.pb.c  unsubscribe.pb.c
sdk/cpp/src/: main.cpp
sdk/cpp/test/: CMakeLists.txt  embedded_proto_encoding_test.cpp  main.cpp  test.cpp  topic_pattern_test.cpp
sdk/cpp/test/utils/: payload_from_string.hpp  test_handler.hpp  test_portal.hpp  test_writer.hpp
sdk/go/: diagnostics_api.go  global_network.go  go.mod  go.sum  native_api.go  native_api_test.go  network_edge.go  network_edge_state_connected.go  network_edge_state_connecting.go  network_edge_state_disconnected.go  network_edge_state_disconnecting.go  network_node.go  network_node_config.go  portal.go  protocol.go  sdk_suite_test.go  subscription_list.go  subscription_list_test.go  taskfile.yml  topic_pattern.go  topic_pattern_test.go  utils.go
sdk/go/portals/: websocket_portal.go
sdk/go/protocol/: connection.pb.go  data_frame.pb.go  publish.pb.go  subscribe.pb.go  unsubscribe.pb.go
spec/: Dockerfile  build-agents.sh  ginkgo_log.go  go.mod  go.sum  run-tests.sh  taskfile.yml
spec/agent_api/: agent.go  forwarder.go  recorder.go  retry.go  universal_agent.go  universal_exec.go  universal_messages.go
spec/agents/: agents.go  combinations.go  taskfile.yml
spec/agents/cpp/: CMakeLists.txt  commands.hpp  conanfile.py  main.cpp  notifications.hpp  sdk  taskfile.yml
spec/agents/go/: go.mod  go.sum  main.go  taskfile.yml
spec/test_bench/: comm_spy.go  free_ports.go  logger.go  test_framework_integration.go  topo_central_point.go  topo_line.go  topo_loop.go  topo_pair.go  utils.go
spec/tests/: basic_communication_test.go  central_point_topo_test.go  core_mechanisms_test.go  publish_subscribe_test.go  specification_suite_test.go  subscriptions_hierarchy_test.go  synchronization_test.go  utils.go  wildcard_subscriptions_test.go
spec/tests/snap/: bc-binary.snap.json  bc-mq-payload.snap.json  bc-ps-mtom.snap.json  bc-unsub.snap.json  hierarchy-override-lls-x.snap.json  hierarchy-override-lls.snap.json  hierarchy-override-uls.snap.json  pubsub-all.snap.json  pubsub.snap.json  synchro-on-estab.snap.json  synchro-on-lost.snap.json
spec/tests/snap/cpt/complex/: left_central.snap.json  right_central.snap.json  top_central.snap.json
